--- a/views/chats.html
+++ b/views/chats.html
@@ -1,19 +1,16 @@
 <!DOCTYPE HTML>
 <html lang="en">
-
 <head>
   <title>Messenger</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="../public/css/chats.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
-  <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" />
-  <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/line-awesome/1.3.0/line-awesome/css/line-awesome.min.css" />
+  <link rel="stylesheet" href="../css/chats.css"/>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"/>
+  <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/line-awesome/1.3.0/line-awesome/css/line-awesome.min.css"/>
 </head>
-
 <body>
   <div class="main-wrapper">
     <div class="container">
@@ -23,117 +20,94 @@
             <div class="col-md-4 col-12 card-stacked">
               <div class="card shadow-line mb-3 chat">
                 <div class="chat-user-detail">
-                  <div class="p-3 chat-header">
-                    <div class="w-100">
-                      <div class="d-flex pl-0">
-                        <div class="d-flex flex-row mt-1 mb-1">
-                          <span class="margin-auto mr-2">
-                            <a href="#"
-                              class="user-undetail-trigger btn btn-sm btn-icon btn-light active text-dark ml-2">
-                              <svg viewBox="0 0 24 24" width="18" height="18" stroke="currentColor" stroke-width="2"
-                                fill="none" stroke-linecap="round" stroke-linejoin="round" class="feather">
-                                <polyline points="15 18 9 12 15 6"></polyline>
-                              </svg>
-                            </a>
-                          </span>
-                          <p class="margin-auto fw-400 text-dark-75">Profile</p>
-                        </div>
-                        <div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="p-3 chat-user-info">
-                    <div class="card-body text-center">
-                      <a href="#!">
-                        <img
-                          src="https://user-images.githubusercontent.com/35243461/168796876-2e363a49-b32c-4218-b5a3-ce12493af69e.jpg"
-                          class="rounded-circle img-fluid shadow avatar-xxl">
-                      </a>
-                      <div class="pt-4 text-center animate4">
-                        <h6 class="fw-300 mb-1">Quan Albert</h6>
-                        <p class="text-muted">Web Developer</p>
-                        <div class="mt-4">
-                          <a href="#" class="btn btn-light-skype btn-icon btn-circle btn-sm btn-shadow mr-2"><i
-                              class="bx bxl-skype"></i></a>
-                          <a href="#" class="btn btn-light-facebook btn-icon btn-circle btn-sm btn-shadow mr-2"><i
-                              class="bx bxl-facebook"></i></a>
-                          <a href="#" class="btn btn-light-twitter btn-icon btn-circle btn-sm btn-shadow mr-2"><i
-                              class="bx bxl-twitter"></i></a>
-                          <a href="#" class="btn btn-light-instagram btn-icon btn-circle btn-sm btn-shadow mr-2"><i
-                              class="bx bxl-instagram"></i></a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+                
+                 
                 </div>
-                <div class="p-3 chat-header">
-                  <div class="d-flex">
-
-                    <div class="flex-shrink-0 margin-auto">
-                      <a href="#" class="btn btn-sm btn-icon btn-light active text-dark ml-2">
-                        <svg viewBox="0 0 24 24" width="15" height="15" stroke="currentColor" stroke-width="2"
-                          fill="none" stroke-linecap="round" stroke-linejoin="round" class="feather">
-                          <path
-                            d="M7 9h-7v-7h1v5.2c1.853-4.237 6.083-7.2 11-7.2 6.623 0 12 5.377 12 12s-5.377 12-12 12c-6.286 0-11.45-4.844-11.959-11h1.004c.506 5.603 5.221 10 10.955 10 6.071 0 11-4.929 11-11s-4.929-11-11-11c-4.66 0-8.647 2.904-10.249 7h5.249v1z" />
-                        </svg>
-                      </a>
-                      <a href="#" class="btn btn-sm btn-icon btn-light active text-dark ml-2">
-                        <svg viewBox="0 0 24 24" width="15" height="15" stroke="currentColor" stroke-width="2"
-                          fill="none" stroke-linecap="round" stroke-linejoin="round" class="feather">
-                          <path d="M11 11v-11h1v11h11v1h-11v11h-1v-11h-11v-1h11z" />
-                        </svg>
-                      </a>
-
-                    </div>
-                  </div>
-                </div>
-
-
-                <div class="chat-user-panel"  id="chatrooms">
-                  <div class="pb-3 d-flex flex-column navigation-mobile pagination-scrool chat-user-scroll">
-
-
-                    <div class="chat-item d-flex pl-3 pr-0 pt-3 pb-3">
-                      <div class="w-100">
-                        <div class="d-flex pl-0">
-
-                          <div>
-                            <p class="margin-auto fw-400 text-dark-75"></p>
-
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+                
+                
+                
+                <div class="chat-user-panel" id="chatrooms">
+                 
                 </div>
               </div>
             </div>
             <div class="col-md-8 col-12 card-stacked">
               <div class="card shadow-line mb-3 chat chat-panel">
-                <div class="p-3 chat-header">
-                  <div class="d-flex">
-                    <div class="w-100 d-flex pl-0">
-                      <div class="mr-3">
-                        <a href="!#">
-                          <p class="fw-400 mb-0 text-dark-75">Beate Lemoine</p>
-                        </a>
-                      </div>
+                
+                <div class="d-flex flex-row mb-3 navigation-mobile scrollable-chat-panel chat-panel-scroll" id="messages">
+                  
+                </div>
+                <div class="chat-search pl-3 pr-3">
+                  <div class="input-group">
+                    <form onsubmit="createTextMessage()" >
+                    <input type="text" class="form-control" placeholder="Write a message" id="textMessage">
+                    <div class="input-group-append prepend-white">
+                      <span class="input-group-text pl-2 pr-2">
+                        
+                        
+                        
+                        <i class="fs-19 bi bi-cursor ml-2 mr-2" type="submit"></i>
+                       
+                      </span>
                     </div>
-                    <div class="flex-shrink-0 margin-auto">
-                      <a href="#" class="btn btn-sm btn-icon btn-light active text-dark ml-2">
-                        <svg viewBox="0 0 24 24" width="15" height="15" stroke="currentColor" stroke-width="2"
-                          fill="none" stroke-linecap="round" stroke-linejoin="round" class="feather">
-                          <circle cx="12" cy="12" r="1"></circle>
-                          <circle cx="12" cy="5" r="1"></circle>
-                          <circle cx="12" cy="19" r="1"></circle>
-                        </svg>
-                      </a>
-                    </div>
+                    </form>
                   </div>
                 </div>
-                <div class="d-flex flex-row mb-3 navigation-mobile scrollable-chat-panel chat-panel-scroll">
-                  <div class="w-100 p-3">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.perfect-scrollbar/0.6.7/js/min/perfect-scrollbar.jquery.min.js"></script>
+  <script src="../js/chats.js"></script>
+  
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script>
+    axios.get("http://127.0.0.1:3000/getChatRooms?userId=64626fe5d7b6aa16fabe1088")
+    .then((res)=>{
+      chats = res.data.chats;
+      console.log(chats);
+      //const parent = document.getElementById("chatrooms")
+      document.getElementById("chatrooms").innerHTML += chats.map((item)=>`
+      
+                   <div class="chat-item active d-flex pl-3 pr-0 pt-3 pb-3">
+                     <div class="w-100">
+                       <div class="d-flex pl-0">
+                         
+                         <div>
+                           <p class="margin-auto fw-400 text-dark-75"><a href="#" onclick="getMessages('${item.id}'); return false;">${item.name}</a></p>
+                           <div class="d-flex flex-row mt-1">
+                             <span>
+                               <div class="svg15 double-check"></div>
+                             </span>
+                             
+                           </div>
+                         </div>
+                       </div>
+                     </div>
+                     <div class="flex-shrink-0 margin-auto pl-2 pr-3">
+                       <div class="d-flex flex-column">
+                         
+                        
+                       </div>
+                     </div>
+                   </div>
+                 </div>`).join("");
+                })
+    .catch((err)=>{console.log(err.message);});
+    function createTextMessage(){
+      
+
+    }
+    function getMessages(id){
+      axios.get(`http://127.0.0.1:3000/getMessages?userId=64626fe5d7b6aa16fabe1088&contactId=${id}`)
+      .then((res)=>{
+        console.log(res);
+        const messages = res.data.message;
+        document.getElementById("messages").innerHTML += messages.map((item)=>`<div class="w-100 p-3">
                     <div class="svg36 loader-animate3 horizontal-margin-auto mb-2"></div>
                     <div class="text-center letter-space drop-shadow text-uppercase fs-12 w-100 mb-3">Today</div>
                     <div class="left-chat-message fs-13 mb-2">
@@ -162,77 +136,10 @@
                         </div>
                       </div>
                     </div>
-                  </div>
-                </div>
-                <div class="chat-search pl-3 pr-3">
-                  <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Write a message">
-                    <div class="input-group-append prepend-white">
-                      <span class="input-group-text pl-2 pr-2">
-                        <i class="chat-upload-trigger fs-19 bi bi-file-earmark-plus ml-2 mr-2"></i>
-                        <i class="fs-19 bi bi-emoji-smile ml-2 mr-2"></i>
-                        <i class="fs-19 bi bi-cursor ml-2 mr-2"></i>
-                        <div class="chat-upload">
-                          <div class="d-flex flex-column">
-                            <div class="p-2">
-                            </div>
-                            <div class="p-2">
-                              <button type="button" class="btn btn-success btn-md btn-icon btn-circle btn-blushing">
-                                <i class="fs-15 bi bi-file-earmark-plus"></i>
-                              </button>
-                            </div>
-                            <div class="p-2">
-                              <button type="button" class="btn btn-warning btn-md btn-icon btn-circle btn-blushing">
-                                <i class="fs-15 bi bi-person"></i>
-                              </button>
-                            </div>
-                            <div class="p-2">
-                              <button type="button" class="btn btn-danger btn-md btn-icon btn-circle btn-blushing">
-                                <i class="fs-15 bi bi-card-image"></i>
-                              </button>
-                            </div>
-                          </div>
-                        </div>
-                      </span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/jquery.perfect-scrollbar/0.6.7/js/min/perfect-scrollbar.jquery.min.js"></script>
-  <script src="../public/js/chats.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script>
-    axios.get("http://127.0.0.1:3000/getChats")
-    .then((res)=>{
-      document.querySelector("#chatrooms").innerHTML = res.data.map((item)=>`
-      
-                  <div class="pb-3 d-flex flex-column navigation-mobile pagination-scrool chat-user-scroll">
-
-
-                    <div class="chat-item d-flex pl-3 pr-0 pt-3 pb-3">
-                      <div class="w-100">
-                        <div class="d-flex pl-0">
-
-                          <div>
-                            <p class="margin-auto fw-400 text-dark-75">${item}</p>
-
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                `).join("");
-    })
-    .catch((err)=>{console.log(err.message);})
+                  </div>`).join("");
+      })
+      .catch((err)=>{console.log("error:",err);});
+    }
   </script>
 </body>
-
 </html>
