--- a/views/chats.html
+++ b/views/chats.html
@@ -103,15 +103,20 @@
 
     }
     function getMessages(id){
-      axios.get(`http://127.0.0.1:3000/getMessages?userId=64626fe5d7b6aa16fabe1088&contactId=${id}`)
+      fetch(`http://localhost:3000/getMessages?userId=64626fe5d7b6aa16fabe1088&contactId=${id}`,{
+        body: null,
+        method: 'GET'
+      })
+      // axios.get(`http://localhost:3000/getMessages?userId=64626fe5d7b6aa16fabe1088&contactId=${id}`)
       .then((res)=>{
         console.log(res);
-        const messages = res.data.message;
+        const messages = JSON.parse(res.messages);
+        console.log(messages);
         document.getElementById("messages").innerHTML += messages.map((item)=>`<div class="w-100 p-3">
                     <div class="svg36 loader-animate3 horizontal-margin-auto mb-2"></div>
                     <div class="text-center letter-space drop-shadow text-uppercase fs-12 w-100 mb-3">Today</div>
                     <div class="left-chat-message fs-13 mb-2">
-                      <p class="mb-0 mr-3 pr-4">Hi, Quan</p>
+                      <p class="mb-0 mr-3 pr-4">${item.text}</p>
                       <div class="message-options">
                         <div class="message-time">06:15</div>
                         <div class="message-arrow"><i class="text-muted la la-angle-down fs-17"></i></div>
